# ChangeLog for dev-libs/boost
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.321 2014/07/30 15:53:07 hasufell Exp $

  30 Jul 2014; Julian Ospald <hasufell@gentoo.org> boost-1.52.0-r7.ebuild:
  backport glibc-2.18 patch to stable candidate wrt #518544

  29 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> boost-1.52.0-r7.ebuild:
  amd64 stable wrt bug #518488

*boost-1.52.0-r7 (29 Jul 2014)

  29 Jul 2014; Julian Ospald <hasufell@gentoo.org> +boost-1.52.0-r7.ebuild,
  boost-1.53.0-r1.ebuild, boost-1.54.0-r1.ebuild, boost-1.55.0-r1.ebuild,
  +files/boost-1.52.0-threads.patch:
  fix build with USE=-threads wrt #458404

  23 Jun 2014; Michał Górny <mgorny@gentoo.org> boost-1.55.0-r1.ebuild:
  Enable python3.4.

  28 Apr 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.52.0-r6.ebuild,
  boost-1.53.0-r1.ebuild, boost-1.54.0-r1.ebuild, boost-1.55.0-r1.ebuild:
  Add apropriate die message on unsupported overriden site-config.jam, wrt bug
  #456792. Thanks to Raimar Sandner <gentoo-bugzilla AT 404not-found.de> for
  reporting this issue

  15 Apr 2014; Sergey Popov <pinkbyte@gentoo.org>
  -files/boost-1.48.0-respect_python-buildid.patch,
  -files/boost-1.48.0-support_dots_in_python-buildid.patch:
  Drop obsolete patches

  15 Apr 2014; Sergey Popov <pinkbyte@gentoo.org> -boost-1.49.0-r2.ebuild:
  Drop old vulnerable version

  07 Apr 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.53.0-r1.ebuild,
  boost-1.54.0-r1.ebuild, boost-1.55.0-r1.ebuild:
  Fix parallel compilation with high number of MAKEOPTS jobs, wrt bugs #506064
  and #498134

  07 Apr 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.52.0-r6.ebuild,
  boost-1.53.0-r1.ebuild, boost-1.54.0-r1.ebuild, boost-1.55.0-r1.ebuild:
  Add support for user patches via epatch_user

  07 Apr 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.55.0-r1.ebuild,
  +files/boost-1.55.0-tools-c98-compat.patch: