@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/boost-1.52.0-r7.ebuild,v 1.3 2014/07/30 15:53:07 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/boost-1.52.0-r7.ebuild,v 1.4 2014/07/30 21:26:35 zlogene Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} )
@@ -87,7 +87,6 @@ src_prepare() {
 		"${FILESDIR}/${P}-locale-utf.patch" \
 		"${FILESDIR}/${PN}-1.52.0-threads.patch" \
 		"${FILESDIR}/${PN}-1.53.0-glibc-2.18-compat.patch" # bug 482372
-
 
 	# Avoid a patch for now
 	for file in libs/context/src/asm/*.S; do
