@@ -2,15 +2,17 @@
 Hash: SHA256
 
 DIST Const-Fast-0.013.tar.gz 13165 SHA256 8579039ece718d816c0bb85e6ba2d7a23fd9f6d47ac56772022184c06cdac78a SHA512 af0a4f7fd23c21794451fb6e08fa214063ce880e2b12334f48c766d0881ad1f59ffb3c4d0ba683437dd2b6e0d03a616ef225792a1da5a3a90b7fa489c89a6477 WHIRLPOOL b204f116294a13d42417d9f59181dad9d52fa7358bb8e4be7b0d28067f85d231a423a001deda2fad409cf736e0cef6060cad1fbc84dc79ede9908cf552d23d8b
-EBUILD Const-Fast-0.13.0.ebuild 604 SHA256 8db43b7a59dd7c8fa2d845e67f2e10b292fdd43d6972826fe0ed0022f97b0826 SHA512 ffec297b382028b047b33b615c24c44957a9ae3b8624ec6480d205c60e64a43f89b8d5bf08ed13bb6aa05842982d9f2dc96b319a32facf57e4af0e5fb695d816 WHIRLPOOL 1d35db2f3f9c59fe2a9929b80c346685095dca0e0b5931abc8ea74db86b3f5755a85adb1ef01ffc188170b4f1145a65e02b6b300359e561307d85ab44ea04039
-MISC ChangeLog 1138 SHA256 81eaf01846197264e0100560daba09dc8651e491501ee856a36c2b5eaf3f78d4 SHA512 2c7407c1de1cfdabba2d6e757215f5d234ceb027506c4372928de67adf60c71ad0350903e9ca8f270b6fc2dda91119e1ddb04a877cd7bc03b8293874529a06de WHIRLPOOL 1f1e967f4ace6510f5b492d428a3096a0472cb64707c651cb28b0ecfb175ba4ee5994f4184b0c3ba8870db1338a6adc079ab5a3d8af4b623329304742fec6b49
+DIST Const-Fast-0.014.tar.gz 12886 SHA256 f805953a08c57846a16a4d85d7b766398afaf7c36c1465fcb1dea09e5fa394db SHA512 89258205fe31aa5a60759ed955e6dae305de69f4bc08251242a82eec9e37251b045908585c470106ed9047f604d3292eb3231c80504b29734966b58b8402a929 WHIRLPOOL 07881da00d1f27cb7f7da38a0cfd1dc4912894e519a9badfa13d69a2e75ed55737e483fb3da5fa2fb5cfa1e98cb3a01d51c9e71ec5f67fc8da9f99ed8e6e0abd
+EBUILD Const-Fast-0.13.0.ebuild 600 SHA256 907ac772742c75165be59bad708e6f4e23bdbeab9673b0dda7fe0bd6c638bd20 SHA512 50dde05f3ba4be7e462bf9bdde54c0d7e348a6c877de6d8b1647d11a7ae1bed9a8e844292b592bb59cb74cd233ecfa06a3d44b82667f05a18566369bf312b365 WHIRLPOOL a2da3be2ac4c97a9a8cc3481be980a5cdad6c4ad8e3aba7f0484eab117a96399ae393183305a26b05d4cd4847b09288ea4821d3a96a787167b72d1d3ad9c0d07
+EBUILD Const-Fast-0.14.0.ebuild 604 SHA256 89783095a3efe6d0e9f14d564945d452f2e1ab93536d591765b8ad720f6df9ea SHA512 90f12a164d8f70aa5a218c82313a5772e76c0952d99535c79db330fdf80c809eee9d4630ae99e48cfc137774f82246261f33c2abe10c24df241412fdc5ad59ca WHIRLPOOL 478d34240912f7f8fce1bdd41f2b19510daceb7c68e65ab922377785b54d57d7d681e30853f5441f70d6f150aceb14f4cc2d3aeff1284219992b9c6b5ce14692
+MISC ChangeLog 1360 SHA256 e6c93341e9ecdabfface8ca6a28e4203e9a8255b04971eec93a95cdf50c1b0b3 SHA512 b56d2182024bf9b12b5dd78715e63ebd9671048391133d5a14eb37c5f957394eb787404b8a5250a5314dce27e47b0eeb05379158791003b69659897457942de5 WHIRLPOOL adbf930642b1f426712e1fb642a0fabaa16c5f2f8b467b6ad032f2d4cfc598bce928491f0f8a7f8ae97932b002f024263ac1a8f00d51471817f3a7f936dae386
 MISC metadata.xml 724 SHA256 b1d3c198d51b4ae649c0fc42a196a09131cd0f96b3ece020b985e2c74eed2410 SHA512 65b8b4984678776b0236f961e808cee13edaf78e03d81fdb351643b35429897c748a4a88bd6f9dbfbadad03d56f4d8b50b9b6275e2fb7ea0f340515e997db4e5 WHIRLPOOL 00ed7a4b202e4dd69d7a48b5691e9e646caf21df301c7e2cd5022c2ddace36dc446035ff899d34df6c688841dd61ec9cbc22fde44e6dcbd3cb92cc68fa599ea0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iJwEAQEIAAYFAlOaxSQACgkQG9wOWsQutdZXhgP+JmiVSBA3P9td3RsujbvAy0SQ
-rf8+DliNQsqx2clQLulF3p8Sv/8NTLWogq3RMlXxZj49nfLmbTZbP4ABa9jLlETb
-hdFKM0Tju9JBHCZ4nbXt+MpMDi9a0NURmk3QCLtYvSkugFtdjsaR7HtHh6LyW/Bk
-/8pbZkRW6X1VK/CyaNk=
-=g3XO
+iJwEAQEIAAYFAlPZY1gACgkQG9wOWsQutdZnswP/crC6F05lYdJ3AkCSYHIiFIaM
+vA+H+sUU/FOm9SGXqT2mY9lbvIPrEYPgrikNMMCL+5vQeEnRh0ZGpb+++6KcchKz
+nkKo9ptMMim5+dlA5LQS2MgnduBkBpR331j2I8usAJaiVTDRfn6UH27KBILx5h1J
+sHCN50NeuW9YHd79tAU=
+=TFBG
 -----END PGP SIGNATURE-----
