@@ -4,10 +4,10 @@ DESCRIPTION=Facility for creating read-only scalars, arrays, and hashes
 EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/Const-Fast/
 IUSE=test
-KEYWORDS=amd64 arm ppc x86 ~amd64-linux ~x86-linux
+KEYWORDS=~amd64 ~arm ~ppc ~x86 ~amd64-linux ~x86-linux
 LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
 RDEPEND=dev-perl/Sub-Exporter dev-perl/Sub-Exporter-Progressive dev-lang/perl:=[-build(-)]
 SLOT=0
-SRC_URI=mirror://cpan/authors/id/L/LE/LEONT/Const-Fast-0.013.tar.gz
+SRC_URI=mirror://cpan/authors/id/L/LE/LEONT/Const-Fast-0.014.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=6eabcffb80bb33713ff9a3abb105cff2
+_md5_=d049276842b806e57b4ef6f9431eabef
