@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.321 2014/07/30 15:53:07 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.322 2014/07/30 21:26:35 zlogene Exp $
+
+  30 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> boost-1.52.0-r7.ebuild:
+  Whitespace
 
   30 Jul 2014; Julian Ospald <hasufell@gentoo.org> boost-1.52.0-r7.ebuild:
   backport glibc-2.18 patch to stable candidate wrt #518544
